# fdmnes-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/fdmnes_mcp/: __init__.py  __main__.py  config.py  server.py  session.py
src/fdmnes_mcp/data/docs/: examples-catalog.md  inputs-and-outputs.md  keyword-reference.md  methods-and-theory.md  pipelines.md
src/fdmnes_mcp/parsers/: __init__.py  bav_parser.py  input_parser.py  keyword_db.py  spectrum_parser.py
src/fdmnes_mcp/resources/: __init__.py  docs.py
src/fdmnes_mcp/tools/: __init__.py  authoring_tools.py  execution_tools.py  io_tools.py  plot_tools.py  shell_tools.py  template_tools.py
